--- a/css/model-custom.css
+++ b/css/model-custom.css
@@ -153,7 +153,7 @@ select {
 
 .my-custom-modal .modal-title {
     text-align: center;
-    background: #3e4095;
+    background: #0098da;
     color: #ffff;
     margin: 0px !important;
     padding: 10px 0px!important;
